--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
           alt="illustration-intro"
         />
         <h2>All your files in one secure location, accessible anywhere.</h2>
-        <!-- <img
-          class="curve"
-          src="images/bg-curvy-mobile.svg"
-          alt="bg-curvy-mobile"
-        /> -->
         <p>
           Fylo stores all your most important files in one secure location.
           Access them when ever you need, share and collaborate with friends
@@ -57,6 +52,7 @@
       </div>
     </main>
     <div class="cards">
+      <!-- <img class="desktop-curve" src="images/bg-curvy-desktop.svg" alt="" /> -->
       <div class="top-div">
         <div class="first">
           <img
@@ -103,138 +99,138 @@
         src="images/illustration-stay-productive.png"
         alt="illustration-stay-productive"
       />
-      <h2>Stay productive, wherever you are</h2>
-      <p>
-        Never let location be an issue when accessing your files. Fylo has you
-        covered for all of your file sttorage needs.
-      </p>
-      <p>
-        Securely share files and folders with friends, family and colleagues for
-        live collaboration. No email attachments required.
-      </p>
-      <div class="link">
-        <a href="#">See how Fylo works</a>
-        <img src="images/icon-arrow.svg" alt="" />
-      </div>
-    </div>
-    <div class="for-email-sec">
-      <div class="testimonials">
-        <div class="testimoni-1">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="user">
-            <img src="images/profile-1.jpg" alt="satish patel" />
-            <div class="names">
-              <p>Satish Patel</p>
-              <p>Founder & CEO, Huddle</p>
-            </div>
-          </div>
-        </div>
-        <div class="testimoni-2">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="user">
-            <img src="images/profile-2.jpg" alt="bruce mckenzle" />
-            <div class="names">
-              <p>Bruce McKenzle</p>
-              <p>Founder & CEO, Huddle</p>
-            </div>
-          </div>
-        </div>
-        <div class="testimoni-3">
-          <p>
-            Fylo has improved our team productivity by an order of magnitude.
-            Since making the switch our team has become a well-oiled
-            collaboration machine.
-          </p>
-          <div class="user">
-            <img src="images/profile-3.jpg" alt="iva boyd" />
-            <div class="names">
-              <p>Iva Boyd</p>
-              <p>Founder & CEO, Huddle</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="email-signup">
-        <h2>Get early access tody</h2>
+      <div class="left">
+        <h2>Stay productive, wherever you are</h2>
         <p>
-          It only takes a minute to sign up and our free starter tier is
-          extremely ggenerous. If you have any questions, our support team would
-          be happy to help you.
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file sttorage needs.
         </p>
-        <div class="inputs">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="email@example.com"
-          />
-          <button type="submit">Get Started For Free</button>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required.
+        </p>
+        <div class="link">
+          <a href="#">See how Fylo works</a>
+          <img src="images/icon-arrow.svg" alt="" />
         </div>
       </div>
-      <footer>
-        <div class="footer-element-wrapper">
-          <div class="logo-text">
-            <img class="first-img" src="images/logo.svg" alt="logo" />
-            <div class="text">
-              <img src="images/icon-location.svg" alt="icon-location" />
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                ab fugiat exercitationem reprehenderit quasi recusandae nihil
-                perspiciatis consequatur, a nam.
-              </p>
-            </div>
-          </div>
-          <div class="contact-info">
-            <div class="phone">
-              <img src="images/icon-phone.svg" alt="icon-phone" />
-              <p>+1-543-123-4567</p>
-            </div>
-            <div class="email">
-              <img src="images/icon-email.svg" alt="icon-email" />
-              <p>example@fylo.com</p>
-            </div>
-          </div>
-          <div class="link1">
-            <a href="#">About Us</a>
-            <a href="#">Jobs</a>
-            <a href="#">Press</a>
-            <a href="#">Blog</a>
-          </div>
-          <div class="link2">
-            <a href="#">Contact Us</a>
-            <a href="#">Terms</a>
-            <a href="#">Privacy</a>
-          </div>
-          <div class="socials">
-            <!-- <img src="images/facebook.svg" alt="facebook" /> -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path
-                d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"
-              />
-            </svg>
-            <!-- <img src="images/twitter.svg" alt="twitter" /> -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path
-                d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.5 8.778c-.441.196-.916.328-1.414.388.509-.305.898-.787 1.083-1.362-.476.282-1.003.487-1.564.597-.448-.479-1.089-.778-1.796-.778-1.59 0-2.758 1.483-2.399 3.023-2.045-.103-3.86-1.083-5.074-2.572-.645 1.106-.334 2.554.762 3.287-.403-.013-.782-.124-1.114-.308-.027 1.14.791 2.207 1.975 2.445-.346.094-.726.116-1.112.042.313.978 1.224 1.689 2.3 1.709-1.037.812-2.34 1.175-3.647 1.021 1.09.699 2.383 1.106 3.773 1.106 4.572 0 7.154-3.861 6.998-7.324.482-.346.899-.78 1.229-1.274z"
-              />
-            </svg>
-            <!-- <img src="images/instagram.svg" alt="instagram" /> -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-              <path
-                d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.082c1.602 0 1.792.006 2.425.035 1.627.074 2.385.845 2.46 2.459.028.633.034.822.034 2.424s-.006 1.792-.034 2.424c-.075 1.613-.832 2.386-2.46 2.46-.633.028-.822.035-2.425.035-1.602 0-1.792-.006-2.424-.035-1.63-.075-2.385-.849-2.46-2.46-.028-.632-.035-.822-.035-2.424s.007-1.792.035-2.424c.074-1.615.832-2.386 2.46-2.46.632-.029.822-.034 2.424-.034zm0-1.082c-1.63 0-1.833.007-2.474.037-2.18.1-3.39 1.309-3.49 3.489-.029.641-.036.845-.036 2.474 0 1.63.007 1.834.036 2.474.1 2.179 1.31 3.39 3.49 3.49.641.029.844.036 2.474.036 1.63 0 1.834-.007 2.475-.036 2.176-.1 3.391-1.309 3.489-3.49.029-.64.036-.844.036-2.474 0-1.629-.007-1.833-.036-2.474-.098-2.177-1.309-3.39-3.489-3.489-.641-.03-.845-.037-2.475-.037zm0 2.919c-1.701 0-3.081 1.379-3.081 3.081s1.38 3.081 3.081 3.081 3.081-1.379 3.081-3.081c0-1.701-1.38-3.081-3.081-3.081zm0 5.081c-1.105 0-2-.895-2-2 0-1.104.895-2 2-2 1.104 0 2.001.895 2.001 2s-.897 2-2.001 2zm3.202-5.922c-.397 0-.72.322-.72.72 0 .397.322.72.72.72.398 0 .721-.322.721-.72 0-.398-.322-.72-.721-.72z"
-              />
-            </svg>
+    </div>
+    <div class="testimonials">
+      <div class="testimoni-1">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user">
+          <img src="images/profile-1.jpg" alt="satish patel" />
+          <div class="names">
+            <p>Satish Patel</p>
+            <p>Founder & CEO, Huddle</p>
           </div>
         </div>
-      </footer>
+      </div>
+      <div class="testimoni-2">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user">
+          <img src="images/profile-2.jpg" alt="bruce mckenzle" />
+          <div class="names">
+            <p>Bruce McKenzle</p>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
+      <div class="testimoni-3">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user">
+          <img src="images/profile-3.jpg" alt="iva boyd" />
+          <div class="names">
+            <p>Iva Boyd</p>
+            <p>Founder & CEO, Huddle</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="email-signup">
+      <h2>Get early access tody</h2>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely
+        ggenerous. If you have any questions, our support team would be happy to
+        help you.
+      </p>
+      <div class="inputs">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="email@example.com"
+        />
+        <button type="submit">Get Started For Free</button>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-element-wrapper">
+        <div class="logo-text">
+          <img class="first-img" src="images/logo.svg" alt="logo" />
+          <div class="text">
+            <img src="images/icon-location.svg" alt="icon-location" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ab
+              fugiat exercitationem reprehenderit quasi recusandae nihil
+              perspiciatis consequatur, a nam.
+            </p>
+          </div>
+        </div>
+        <div class="contact-info">
+          <div class="phone">
+            <img src="images/icon-phone.svg" alt="icon-phone" />
+            <p>+1-543-123-4567</p>
+          </div>
+          <div class="email">
+            <img src="images/icon-email.svg" alt="icon-email" />
+            <p>example@fylo.com</p>
+          </div>
+        </div>
+        <div class="link1">
+          <a href="#">About Us</a>
+          <a href="#">Jobs</a>
+          <a href="#">Press</a>
+          <a href="#">Blog</a>
+        </div>
+        <div class="link2">
+          <a href="#">Contact Us</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+        </div>
+        <div class="socials">
+          <!-- <img src="images/facebook.svg" alt="facebook" /> -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"
+            />
+          </svg>
+          <!-- <img src="images/twitter.svg" alt="twitter" /> -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.5 8.778c-.441.196-.916.328-1.414.388.509-.305.898-.787 1.083-1.362-.476.282-1.003.487-1.564.597-.448-.479-1.089-.778-1.796-.778-1.59 0-2.758 1.483-2.399 3.023-2.045-.103-3.86-1.083-5.074-2.572-.645 1.106-.334 2.554.762 3.287-.403-.013-.782-.124-1.114-.308-.027 1.14.791 2.207 1.975 2.445-.346.094-.726.116-1.112.042.313.978 1.224 1.689 2.3 1.709-1.037.812-2.34 1.175-3.647 1.021 1.09.699 2.383 1.106 3.773 1.106 4.572 0 7.154-3.861 6.998-7.324.482-.346.899-.78 1.229-1.274z"
+            />
+          </svg>
+          <!-- <img src="images/instagram.svg" alt="instagram" /> -->
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path
+              d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.082c1.602 0 1.792.006 2.425.035 1.627.074 2.385.845 2.46 2.459.028.633.034.822.034 2.424s-.006 1.792-.034 2.424c-.075 1.613-.832 2.386-2.46 2.46-.633.028-.822.035-2.425.035-1.602 0-1.792-.006-2.424-.035-1.63-.075-2.385-.849-2.46-2.46-.028-.632-.035-.822-.035-2.424s.007-1.792.035-2.424c.074-1.615.832-2.386 2.46-2.46.632-.029.822-.034 2.424-.034zm0-1.082c-1.63 0-1.833.007-2.474.037-2.18.1-3.39 1.309-3.49 3.489-.029.641-.036.845-.036 2.474 0 1.63.007 1.834.036 2.474.1 2.179 1.31 3.39 3.49 3.49.641.029.844.036 2.474.036 1.63 0 1.834-.007 2.475-.036 2.176-.1 3.391-1.309 3.489-3.49.029-.64.036-.844.036-2.474 0-1.629-.007-1.833-.036-2.474-.098-2.177-1.309-3.39-3.489-3.489-.641-.03-.845-.037-2.475-.037zm0 2.919c-1.701 0-3.081 1.379-3.081 3.081s1.38 3.081 3.081 3.081 3.081-1.379 3.081-3.081c0-1.701-1.38-3.081-3.081-3.081zm0 5.081c-1.105 0-2-.895-2-2 0-1.104.895-2 2-2 1.104 0 2.001.895 2.001 2s-.897 2-2.001 2zm3.202-5.922c-.397 0-.72.322-.72.72 0 .397.322.72.72.72.398 0 .721-.322.721-.72 0-.398-.322-.72-.721-.72z"
+            />
+          </svg>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
